--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,19 +8,18 @@ authors = [
 ]
 description = "FactoryTalk Batch Bulk Editor"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.14,<3.15"
 dependencies = [
-    "lxml>=5.3.1",
+    "lxml>=6.0.2",
     "openpyxl>=3.1.5",
     "toml>=0.10.2",
 ]
 
 [dependency-groups]
 dev = [
-    "commitizen>=4.2.1",
     "mypy>=1.15.0",
-    "pre-commit>=4.1.0",
-    "pydantic>=2.10.6",
+    "pre-commit>=4.5.1",
+    "pydantic>=2.12.5",
     "pytest>=8.3.4",
 ]
 
