--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
         with:
           fetch-depth: 0
           ref: ${{ github.event.workflow_run.head_branch }}
@@ -43,7 +43,7 @@ jobs:
         run: |
           current="$(python scripts/versioning.py --mode current)"
           next="$(git-cliff --config cliff.toml --bumped-version --unreleased --tag-pattern '^v?[0-9]+\.[0-9]+\.[0-9]+$')"
-          tag="v${next}"
+          tag="${next}"
 
           echo "current=${current}" >> "${GITHUB_OUTPUT}"
           echo "next=${next}" >> "${GITHUB_OUTPUT}"
