--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,8 @@ jobs:
     needs:
       - build_windows
       - publish_pypi
+    if: |
+      needs.build_windows.result == 'success'
     steps:
       - name: Checkout
         uses: actions/checkout@v6
