fix(ci): run tag-version step with bash on windows runner

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -25,6 +25,7 @@ jobs:
 
       - name: Get version from tag
         id: version
+        shell: bash
         run: |
           VERSION=$(git describe --tags --abbrev=0)
           echo "version=$VERSION" >> $GITHUB_OUTPUT
